name:                apollo
version:             0.0.0.0
category:            Language
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
homepage:            https://github.com/apollo-lang/apollo
license:             MIT
license-file:        LICENSE

synopsis:            A programming language for algorithmic and musical composition.

author:              Ben Kogan
                   , Javier Llaca
                   , Reza Nayebi
                   , Roberto Jose De Amorim
                   , Souren Papazian

executable apollo
  main-is:             Main.hs

  other-modules:       Check
                     , Env
                     , Error
                     , Eval
                     , Expr
                     , Lex
                     , Parse
                     , Util
                     , Midi
                     , Type

  build-depends:       base           >=4.6  && <4.8
                     , regex-posix    >=0.95 && <0.96
                     , mtl            >=2.1  && <2.2
                     , array          >=0.5  && <0.6
                     , transformers   >=0.3  && <0.4
                     , containers     >=0.5  && <0.6
                     , HCodecs        >=0.5  && <0.6

  other-extensions:    CPP
  hs-source-dirs:      src
  build-tools:         alex          >= 3.1  && <3.2
                     , happy         >= 1.19 && <1.20
  default-language:    Haskell2010
  ghc-options:         -Wall

